--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^24.9.1"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "imap-simple": "^1.6.3"
   }
 }
